--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-phone-number-input": "^3.2.19",
+    "react-router": "^6.8.2",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-star-rating-component": "^1.4.1",
     "web-vitals": "^2.1.4",
